# personalized_news_telegram_bot

./: .gitignore  README.md  hello.py  pyproject.toml
backend/: .env.example  requirements.txt
backend/app/: command_handler.py  config.py  conversation.py  database.py  main.py  news_service.py  recommendation.py  scheduler.py  telegram_handler.py  test.py
