[project]
name = "news-digest-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.115.11",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "litellm>=1.63.11",
    "lxml[html-clean]>=5.3.1",
    "markdown>=3.7",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.1",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=22.0",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.39",
]
